<resources>
    <string name="app_name">Spotify AutoQueue</string>
    <!-- Strings related to login -->
    <string name="short_name">AutoQueue</string>
    <string name="save">Save</string>

    <string name="main_activity_title">Your Groups</string>

    <string name="settings_activity_title">Settings</string>
    <string name="back_to_home_button_description">Go back to main page</string>
    <string name="open_error_log_button_description">Open error log</string>


    <string name="authorization_title">Authorization</string>
    <string name="get_auth_code_label">Get authorization code</string>
    <string name="input_auth_hint">Paste auth code here</string>
    <string name="save_access_tokens">Save tokens</string>

    <string name="sdk_connection_title">SDK Connection</string>
    <string name="sdk_connection_current_title">Current track from SDK:</string>

    <string name="error_log_activity_title">Error Log</string>
    <string name="error_log_back_button_description">Back to settings</string>

    <string name="create_group_activity_title">Create Group</string>

    <string name="parent_category_title">Parent track:</string>
    <string name="search_parent_hint">Search for parent track</string>

    <string name="child_category_title">Child track:</string>
    <string name="search_child_hint">Search for child track</string>

    <string name="search_button_description">Submit search</string>
    <string name="name_placeholder">Name</string>
    <string name="artist_placeholder">Artist</string>

    <string name="select_condition_title">Check if parent is:</string>
    <string name="currently_playing">currently playing</string>
    <string name="next_in_queue">next in queue</string>

    <string name="save_new_group">Save</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Playback widget</string>

    <string name="widget_example_track_name">Dead!</string>
    <string name="widget_example_artist">My Chemical Romance</string>
    <string name="widget_config_text_color_title">Text color:</string>
    <string name="black_config_widget_button">Black</string>
    <string name="white_config_widget_button">White</string>
    <string name="widget_config_button_color_title">Button color:</string>
    <string name="widget_config_background_title">Background style:</string>
    <string name="dark_widget_config_button">Black</string>
    <string name="light_widget_config_button">White</string>
    <string name="pink_widget_config_button">Pink</string>
    <string name="cyan_widget_config_button">Cyan</string>
    <string name="green_widget_config_button">Green</string>
    <string name="red_widget_config_button">Red</string>
    <string name="widget_background_opacity_title">Opacity:</string>
</resources>