<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        style="@style/banner_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settingsActivityTitle"
            style="@style/activity_title"
            android:text="@string/settings_activity_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settingsBackButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/settingsBackButton"
            style="@style/back_arrow_button"
            android:contentDescription="@string/back_to_home_button_description"
            android:onClick="backToHome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <ImageButton
            android:id="@+id/openErrorLogButton"
            style="@style/textColor"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/open_error_log_button_description"
            android:onClick="openErrorLog"
            android:scaleX="1.3"
            android:scaleY="1.3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icons8_database_error_72___" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/authorizationTitle"
                style="@style/category_title"
                android:layout_margin="8dp"
                android:text="@string/authorization_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/authSubmitLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linkToAuthCode">

                <EditText
                    android:id="@+id/inputAuthCode"
                    style="@style/textColor"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:textSize="16sp"
                    android:hint="@string/input_auth_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/submitAuthCodeButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />

                <ImageButton
                    android:id="@+id/submitAuthCodeButton"
                    style="@style/button_background"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="submitAuthCode"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icons8_enter_96___"
                    app:tint="@color/spotify_logo_green" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linkToAuthCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="openAuthLink"
                android:outlineProvider="none"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorizationTitle">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_auth_code_label"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/textColor"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icons8_external_link_96___" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView5"
                style="@style/category_title"
                android:layout_margin="8dp"
                android:text="@string/sdk_connection_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authSubmitLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sdk_connection_current_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sdkConnectionCurrentTrack"
                    style="@style/textColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="Test"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

                <Button
                    android:id="@+id/resetAccessTokens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/spotify_logo_green"
                    android:onClick="resetAccessTokens"
                    android:text="Reset Access Tokens"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/textColor"
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:text="submit new auth code after reset"
                    app:layout_constraintEnd_toEndOf="@+id/resetAccessTokens"
                    app:layout_constraintStart_toStartOf="@+id/resetAccessTokens"
                    app:layout_constraintTop_toBottomOf="@+id/resetAccessTokens" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>